--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,8 +17,8 @@
     --featured-font-family: "Archivo", sans-serif;
     --character-top-image-src: url("/assets/images/characters/kids-on-the-bike.svg");
     --character-top-image-color: #ffffff;
-    --character-botton-image-src: url("/assets/images/characters/inverted-world-monster.svg");
-    --character-botton-image-color: #e5e5e5;
+    --character-bottom-image-src: url("/assets/images/characters/inverted-world-monster.svg");
+    --character-bottom-image-color: #e5e5e5;
     --background-lamp-image: url("/assets/images/backgrounds/lamps.png");
     --footer-background-color: #b5bbbf;
 }
@@ -57,6 +57,9 @@ h1, h2, h3{
     color: var(--primary-color);
     text-transform: uppercase;
     margin-bottom: 40px;
+}
+body{
+    background: var(--page-background);
 }
 
 p{
@@ -155,8 +158,9 @@ header::before{
 .world-characters#top-characters{
     height: 100%;
     background-color: var(--character-top-image-color);
-    /***--webkit-mask: var(--character-top-image-src) bottom / contain no-repeat;***/
-    mask: var(--character-top-image-src) bottom / 100% no-repeat;
+    bottom: -3px;
+    -webkit-mask: var(--character-top-image-src) bottom / 100% no-repeat;
+    mask: var(--character-top-image-src) bottom / contain no-repeat;
 
 }
 
@@ -166,7 +170,7 @@ header::before{
     top: 3px;
     transform: rotateZ(180deg) scaleX(-1);
     position: relative;
-    /***--webkit-mask: var(--character-bottom-image-src) bottom / contain no-repeat;***/
+    -webkit-mask: var(--character-bottom-image-src) bottom / 100% no-repeat;
     mask: var(--character-bottom-image-src) bottom / contain no-repeat;
 
 }
@@ -178,6 +182,16 @@ main{
     align-items: center;
 }
 
+main::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: var(--page-background) no-repeat,
+    url("../images/backgrounds/florest.png") no-repeat;
+  background-size: cover;
+  z-index: -1;
+}
 /***SECTION STYLES***/
 section{
     display: flex;
@@ -328,4 +342,41 @@ section{
 #section-form .form-container form button:hover{
     background-color: var(--primary-color-contrast);
     color: var(--field-background-color);
+}
+
+footer {
+  padding: 60px 0;
+  background-color: var(--footer-background-color);
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+}
+
+footer p {
+  max-width: 700px;
+  margin-bottom: 24px;
+}
+
+footer::before,
+footer::after {
+  content: "";
+  width: 300px;
+  height: 200px;
+  background: url("../images/footer/tape.svg") no-repeat;
+  background-size: contain;
+  position: absolute;
+  bottom: -30px;
+}
+
+footer::before {
+  left: -50px;
+  transform: rotateZ(-10deg);
+}
+
+footer::after {
+  right: -50px;
+  transform: rotateZ(10deg);
 }
